# valor-std

./: CMakeLists.txt
src/: CMakeLists.txt
src/fstream/: fstream.cpp  fstream.h
src/parser/: xml.cpp  xml.h
src/string/: string.cpp  string.h
tests/: CMakeLists.txt  main.cpp  test.xml
